[gd_scene load_steps=36 format=3 uid="uid://mhkieon654wf"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_boi1r"]
[ext_resource type="Script" path="res://Characters/HandEquip.gd" id="3_ns4fg"]
[ext_resource type="Resource" uid="uid://loy03h3ib4jk" path="res://Items/IronAxe.tres" id="4_admir"]
[ext_resource type="Texture2D" uid="uid://djgp25d7iotr8" path="res://Art/Items/weapon_axe.png" id="5_0dfcb"]
[ext_resource type="Texture2D" uid="uid://dxndgtru5yfey" path="res://Art/SP301_nyknck/Slash-01-Sheet.png" id="5_5n4nj"]
[ext_resource type="PackedScene" uid="uid://d0bym52cyk76i" path="res://Characters/dash.tscn" id="5_kgc0q"]
[ext_resource type="Shader" path="res://Characters/player.gdshader" id="5_pqoim"]
[ext_resource type="Texture2D" uid="uid://w05ygdh6o000" path="res://Art/Characters/Player-hand.png" id="6_oom8x"]
[ext_resource type="Texture2D" uid="uid://cseoyk8x2nvys" path="res://Art/Characters/Player1.png" id="9_sjwim"]

[sub_resource type="Animation" id="Animation_pjlma"]
resource_name = "Death"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_e3x48"]
resource_name = "Hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteBody:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_rbgbb"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_4cq0l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteBody:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xq5es"]
resource_name = "Swing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_e0ubk"]
resource_name = "WalkSide"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_q13yh"]
resource_name = "WalkSideRe"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_lf87x"]
resource_name = "WalkUp"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pv0qw"]
_data = {
"Death": SubResource("Animation_pjlma"),
"Hurt": SubResource("Animation_e3x48"),
"Idle": SubResource("Animation_rbgbb"),
"RESET": SubResource("Animation_4cq0l"),
"Swing": SubResource("Animation_xq5es"),
"WalkSide": SubResource("Animation_e0ubk"),
"WalkSideRe": SubResource("Animation_q13yh"),
"WalkUp": SubResource("Animation_lf87x")
}

[sub_resource type="Animation" id="Animation_tt7ll"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandEquip/Item/Hitbox/CollHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandEquip:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HandEquip:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HandEquip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemEffect/Effect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HandEquip/Item/EquipSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ItemEffect/Effect:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_y27f5"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandEquip:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(5, 0), Vector2(5, 0), Vector2(5, -2), Vector2(5, -1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandEquip:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ju0rv"]
resource_name = "swing"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HandEquip/Item/Hitbox/CollHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.01, 0.18),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HandEquip:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.18, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 2.79253, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HandEquip:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(7.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HandEquip:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ItemEffect/Effect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HandEquip/Item/EquipSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ItemEffect/Effect:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.07, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_dpklj"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ljov4"]
_data = {
"RESET": SubResource("Animation_tt7ll"),
"idle": SubResource("Animation_y27f5"),
"swing": SubResource("Animation_ju0rv"),
"walk": SubResource("Animation_dpklj")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rlkhv"]
size = Vector2(9, 9)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ub02j"]
shader = ExtResource("5_pqoim")
shader_parameter/whiten = false
shader_parameter/mix_weight = 1.0

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_m4by2"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r7acc"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_y7des"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wcyht"]
animation = &"WalkSideRe"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ovff6"]
animation = &"WalkSide"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ual1o"]
blend_point_0/node = SubResource("AnimationNodeAnimation_r7acc")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_y7des")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_wcyht")
blend_point_2/pos = Vector2(-1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_ovff6")
blend_point_3/pos = Vector2(1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rs41n"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1h1ec"]
priority = 2
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_16j6b"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_k6hj4"]
states/Idle/node = SubResource("AnimationNodeAnimation_m4by2")
states/Idle/position = Vector2(393.333, 100.667)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_ual1o")
states/Walk/position = Vector2(581.333, 99.9095)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_rs41n"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_1h1ec"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_16j6b")]
graph_offset = Vector2(0, -45.857)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_boi1r")

[node name="Dash" parent="." instance=ExtResource("5_kgc0q")]
position = Vector2(0, -11)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_pv0qw")
}

[node name="Hand" type="Node2D" parent="."]
position = Vector2(0, -4)

[node name="HandAnimationPlayer" type="AnimationPlayer" parent="Hand"]
libraries = {
"": SubResource("AnimationLibrary_ljov4")
}

[node name="HandEquip" type="Node2D" parent="Hand"]
position = Vector2(7.5, 0)
script = ExtResource("3_ns4fg")
equipped_item = ExtResource("4_admir")

[node name="Item" type="Node2D" parent="Hand/HandEquip"]
position = Vector2(1.5, 6.5)

[node name="EquipSprite" type="Sprite2D" parent="Hand/HandEquip/Item"]
texture = ExtResource("5_0dfcb")
offset = Vector2(0, -13)

[node name="Hitbox" type="Area2D" parent="Hand/HandEquip/Item"]
position = Vector2(0, 1)

[node name="CollHitbox" type="CollisionShape2D" parent="Hand/HandEquip/Item/Hitbox"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_rlkhv")
disabled = true

[node name="Hand" type="Sprite2D" parent="Hand/HandEquip"]
texture = ExtResource("6_oom8x")

[node name="ItemEffect" type="Node2D" parent="Hand"]

[node name="Effect" type="Sprite2D" parent="Hand/ItemEffect"]
visible = false
position = Vector2(19, -0.25)
scale = Vector2(0.536802, 0.688679)
texture = ExtResource("5_5n4nj")
hframes = 3

[node name="SpriteBody" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ub02j")
position = Vector2(0, -12)
texture = ExtResource("9_sjwim")
hframes = 4
vframes = 7
frame = 4

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_k6hj4")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = true
parameters/conditions/is_moving = false
parameters/Walk/blend_position = Vector2(0.193317, 0.00639534)

[connection signal="body_entered" from="Hand/HandEquip/Item/Hitbox" to="Hand/HandEquip" method="_on_area_2d_body_entered"]
